# simple-viewer-gl

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL  Makefile  README  README.md  appveyor.yml  bitbucket-pipelines.yml  config.example  shippable.yml  sviewgl.cbp  sviewgl.desktop  sviewgl_arc.sh
cmake/: FindILMBase.cmake  FindIMLIB2.cmake  FindImlib2.cmake  FindLCMS2.cmake  FindLIBCONFIG.cmake  FindOpenJPEG.cmake  FindWebP.cmake  clang-cxx-dev-tools.cmake  glfwTargets-release.cmake  glfwTargets.cmake
projects/linux/: CMakeLists.txt
projects/osx/: CMakeLists.txt
res/: Icon.psd
res/macos/: Icon.icns  Info.plist.in
src/: DroidSans.hpp  arial.hpp  callbacks.h  checkerboard.cpp  checkerboard.h  config.cpp  config.h  deletionmark.cpp  deletionmark.h  exifpopup.cpp  exifpopup.h  fileslist.cpp  fileslist.h  ftstring.cpp  ftstring.h  ftsymbol.cpp  ftsymbol.h  gui.cpp  gui.h  imageborder.cpp  imageborder.h  imagegrid.cpp  imagegrid.h  imageloader.cpp  imageloader.h  img-icons.c  img-loading.c  img-na.c  img-pointer-cross.c  infobar.cpp  infobar.h  main.cpp  main.h  notavailable.cpp  notavailable.h  overlayinfo.cpp  overlayinfo.h  pixelinfo.cpp  pixelinfo.h  pixelpopup.cpp  (+24 more)
src/cms/: cms.cpp  cms.h
src/common/: Ini.cpp  Ini.h  ZlibDecoder.cpp  ZlibDecoder.h  bitmap_description.h  buffer.h  cached_reader.cpp  cached_reader.h  callbacks.h  config.cpp  config.h  file.cpp  file.h  file_zlib.cpp  file_zlib.h  helpers.cpp  helpers.h  scale.h  unicode.h
src/formats/: AGEheader.cpp  AGEheader.h  PngReader.cpp  PngReader.h  file.cpp  file.h  file_zlib.cpp  file_zlib.h  format.cpp  format.h  formatage.cpp  formatage.h  formatbmp.cpp  formatbmp.h  formatcommon.cpp  formatcommon.h  formatdds.cpp  formatdds.h  formateps.cpp  formateps.h  formatexr.cpp  formatexr.h  formatgif.cpp  formatgif.h  formaticns.cpp  formaticns.h  formatico.cpp  formatico.h  formatjp2k.cpp  formatjp2k.h  formatjpeg.cpp  formatjpeg.h  formatpng.cpp  formatpng.h  formatpnm.cpp  formatpnm.h  formatppm.cpp  formatppm.h  formatpsd.cpp  formatpsd.h  (+34 more)
src/math/: rect.h  vector.cpp  vector.h
src/network/: curl.cpp  curl.h
src/platform/apple/: GLFWCustomDelegate.h  GLFWCustomDelegate.m
src/popups/: exifpopup.cpp  exifpopup.h  helppopup.cpp  helppopup.h  img-icons.c  img-pointer-cross.c  infobar.cpp  infobar.h  pixelpopup.cpp  pixelpopup.h  popup.cpp  popup.h
src/types/: color.cpp  color.h  math.h  rect.h  types.h  vector.h
